--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "morrislaptop/var-dumper-with-context",
     "description": "Show the line number where the dump method was called",
-    "require": {
+    "require-dev": {
         "symfony/var-dumper": "^3.0"
     },
     "license": "MIT",
